2004-10-20  Bryce McKinlay  <mckinlay@redhat.com>

	PR java/15575
	* configure.ac: Declare AM_LANGINFO_CODESET.
	* aclocal.m4: Define AM_LANGINFO_CODESET.
	* configure, config.in: Rebuilt.

2004-10-20  Kazu Hirata  <kazu@cs.umass.edu>

	* expr.c (store_expr): Remove code that is run when
	want_value & 1 is nonzero.

2004-10-20  Mark Mitchell  <mark@codesourcery.com>

	* gthr-posix.h (__gthread_active_p): Use __extension__ around cast
	from function pointer to void *.

2004-10-20  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/18032
	* config/sh/sh.c (sh_expand_epilogue): Emit a blockage insn before
	the frame pointer adjustment when exception handling is enabled.

2004-10-20  Kazu Hirata  <kazu@cs.umass.edu>

	* stor-layout.c: Fix a comment typo.

2004-10-20  Kazu Hirata  <kazu@cs.umass.edu>

	* expr.c (store_field): Remove two arguments value_mode and
	unsignedp.
	(expand_assignment, store_constructor_field,
	expand_expr_real_1): Adjust calls to store_field.

2004-10-18  Ramana Radhakrishnan  <ramana.radhakrishnan@codito.com>

	* config/arc/lib1funcs.asm (___umulsidi3): Correct usage of flags.

	PR target/17317
	* config/arc/arc.h (REGNO_OK_FOR_BASE_P,REGNO_OK_FOR_INDEX_P,
	REG_OK_FOR_BASE, REG_OK_FOR_INDEX): Consider blink(r31) as a valid
	base and index register for loads.

	* config/arc/t-arc: Fix multilib handling.

2004-10-20  Hans-Peter Nilsson  <hp@bitrange.com>

	* cfgrtl.c (rtl_verify_flow_info_1): When checking insns in a bb,
	don't inspect BLOCK_FOR_INSN for barriers.
	* emit-rtl.c (emit_barrier_before): Revert last change.
	(emit_barrier_after, emit_barrier): Ditto.

	* doc/extend.texi (Extended Asm): Warn and provide example
	solution for using a call-clobbered asm register.
	(Local Reg Vars): Similar.  Cross-reference example.

2004-10-19  Andrew Pinski  <pinskia@physics.uc.edu>

	* tree-cfg.c (group_case_labels): Look at the second to last
	case statement for combing with the default case.

2004-10-19  Richard Hendeson  <rth@redhat.com>

	PR 17962